--- a/Biblio.bib
+++ b/Biblio.bib
@@ -56,7 +56,7 @@
 author = {Galetzka, Michael and Glauner, Patrick},
 year = {2017},
 month = {02},
-pages = {},
+pages = {1-2},
 title = {A Simple and Correct Even-Odd Algorithm for the Point-in-Polygon Problem for Complex Polygons},
 doi = {10.5220/0006040801750178}
 }
@@ -89,7 +89,7 @@ year = {2001},
 number = {4},
 pages = {509--522},
 title = {An improved contact algorithm for the material point method and application to stress propagation in granular material},
-journal = {CMES. Computer Modeling in Engineering & Sciences},
+journal = {CMES. Computer Modeling in Engineering {\&} Sciences},
 doi = {10.3970/cmes.2001.002.509}
 }
 
@@ -184,7 +184,7 @@ year = {2018}
 
 @article{YUN_2019,
 title = "A computational methodology for simulating quasi-brittle fracture problems",
-journal = "Computers & Structures",
+journal = "Computers {\&} Structures",
 volume = "215",
 pages = "65 - 79",
 year = "2019",
@@ -196,7 +196,7 @@ keywords = "Three-dimensional fracture, Crack tracking algorithm, Anisotropic da
 
 @article{NAGASHIMA_2016,
 title = "Development of a damage propagation analysis system based on level set XFEM using the cohesive zone model",
-journal = "Computers & Structures",
+journal = "Computers {\&} Structures",
 volume = "174",
 pages = "42 - 53",
 year = "2016",
@@ -208,7 +208,7 @@ keywords = "XFEM, Cohesive zone model, Level set method, Tip element, Implicit m
 
 @article{ABDELAZIZ_2008,
 title = "A survey of the extended finite element",
-journal = "Computers & Structures",
+journal = "Computers {\&} Structures",
 volume = "86",
 number = "11",
 pages = "1141 - 1151",
@@ -222,7 +222,7 @@ keywords = "Extended finite element, Level sets method, Fracture mechanics"
 
 @article{HUANG_2018,
 title = "An efficient morphology generation and level set representation of cementitious microstructures with arbitrarily shaped aggregates and cracks via extended finite elements",
-journal = "Computers & Structures",
+journal = "Computers {\&} Structures",
 volume = "206",
 pages = "122 - 144",
 year = "2018",
@@ -247,7 +247,7 @@ author = "I.L. Lim and I.W. Johnston and S.K. Choi"
 
 @article{Wang2017,
 title = "A unified variational eigen-erosion framework for interacting brittle fractures and compaction bands in fluid-infiltrating porous media",
-journal = "Computer Methods in Applied Mechanics and Engineering",
+journal = "Computer Methods in Applied Mechanics {\&} Engineering",
 volume = "318",
 pages = "1 - 32",
 year = "2017",
@@ -274,6 +274,7 @@ author = {Zhang, Kun and Shen, Shui-Long and Zhou, Annan},
 title = {Dynamic brittle fracture with eigenerosion enhanced material point method},
 journal = {International Journal for Numerical Methods in Engineering},
 pages = {1-27},
+year = {2020},
 keywords = {brittle fracture, eigenerosion approach, material point method, phantom-node method},
 doi = {10.1002/nme.6381},
 }
@@ -285,6 +286,7 @@ journal = {International Journal for Numerical and Analytical Methods in Geomech
 volume = {44},
 number = {10},
 pages = {1417-1445},
+year = {2020},
 keywords = {cohesive fracture law, mixed-mode, regularisation, rock fracture, smoothed particle hydrodynamics (SPH)},
 doi = {10.1002/nag.3069}
 }
@@ -311,9 +313,7 @@ year = {2018},
 month = {10},
 volume = {172},
 pages = {94 - 104},
-year = {2018},
 title = {Meshfree modeling of the dynamic mixed-mode fracture in FRC through an eigensoftening approach},
-volume = {172},
 journal = {Engineering Structures},
 doi = {10.1016/j.engstruct.2018.06.010}
 }
@@ -407,8 +407,7 @@ volume = {1},
 number = {1},
 pages = {11-25},
 title = {Three-Dimensional Dynamic Fracture Analysis Using the Material Point Method},
-volume = {16},
-journal = {Computer Modeling in Engineering & Sciences},
+journal = {Computer Modeling in Engineering {\&} Sciences},
 doi = {10.3970/cmes.2006.016.141 }
 }
 
@@ -430,7 +429,7 @@ year = {2004},
 number = {3},
 pages = {295--308},
 title = {Calculation of J-Integral and Stress Intensity Factors using the Material Point Method},
-journal = {CMES. Computer Modeling in Engineering & Sciences},
+journal = {CMES. Computer Modeling in Engineering {\&} Sciences},
 doi = {10.3970/cmes.2004.006.295}
 }
 
@@ -459,7 +458,7 @@ doi = {10.1002/nme.651}
 @Article{Nairn_2003,
 AUTHOR = {Nairn, John},
 TITLE = {Material Point Method Calculations with Explicit Cracks},
-JOURNAL = {Computer Modeling in Engineering \& Sciences},
+JOURNAL = {Computer Modeling in Engineering {\&} Sciences},
 VOLUME = {4},
 YEAR = {2003},
 NUMBER = {6},
@@ -1099,7 +1098,7 @@ month = {10},
 pages = {27-33},
 title = {On the stability of a Newmark's scheme-based predictor-corrector algorithm},
 volume = {53},
-journal = {Computers & Structures - COMPUT STRUCT},
+journal = {Computers {\&} Structures},
 doi = {10.1016/0045-7949(94)90126-0}
 }
 
@@ -1113,7 +1112,6 @@ title = {{Enhanced local maximum-entropy approximation for stable meshfree simul
 year = {2019},
 volume = {344},
 pages = {858 - 886},
-year = {2019},
 issn = {0045-7825}
 }
 
@@ -3823,21 +3821,7 @@ title = {{Improving the Material-Point Method}},
 url = {http://link.springer.com/10.1007/978-3-319-39022-2{\_}10},
 year = {2016}
 }
-@article{Wang2017,
-abstract = {Screwpiles are, as the name suggests, piled foundations which are screwed into the ground. They provide restraint to both upwards and downward loading directions and are commonly used for light structures subject to overturning or wind loading, such as sign gantries at the sides of motorways. An EPSRC-funded project led by University of Dundee has recently started, with Durham and Southampton as partners, in which the use of screwpiles (individual or in groups) for offshore foundations is under investigation. At Durham, a numerical modelling framework based on the material point method (MPM) is being developed for the installation phase of a screwpile. The aim is to use the model to provide an accurate representation of the in situ ground conditions once the pile is installed, as during installation the ground is disturbed and any model that “wishes in place” a screwpile may not provide representative long-term performance predictions. Following modelling of installation, the soil state will be transferred to a standard finite element package for the subsequent modelling of in-service performance (the MPM being considered unnecessary and computationally expensive for this phase of the life of a screwpile). In this preliminary work, we present the development of features of this numerical tool to simulate the screwpile installation. These features include a moving mesh concept (both translation and rotation) and interface elements. The effectiveness of the algorithm is illustrated through simple examples.},
-author = {Wang, Lei and Coombs, William M. and Augarde, Charles E. and Brown, Michael and Knappett, Jonathan and Brennan, Andrew and Richards, David and Blake, Anthony},
-doi = {10.1016/J.PROENG.2017.01.040},
-file = {:home/miguelmolinos/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wang et al. - 2017 - Modelling Screwpile Installation Using the MPM.pdf:pdf},
-issn = {1877-7058},
-journal = {Procedia Engineering},
-month = {jan},
-pages = {124--132},
-publisher = {Elsevier},
-title = {{Modelling Screwpile Installation Using the MPM}},
-url = {https://www.sciencedirect.com/science/article/pii/S1877705817300401},
-volume = {175},
-year = {2017}
-}
+
 @inproceedings{andersen2009analysis,
 abstract = {The material-point method (MPM) is a new numerical method for analysis of large strain engineering problems. The MPM applies a dual formulation, where the state of the problem (mass, stress, strain, velocity etc.) is tracked using a finite set of material points while the governing equations are solved on a background computational grid. Several references state, that one of the main advantages of the material-point method is the easy application of complicated material behaviour as the constitutive response is updated individually for each material point. However, as discussed here, the MPM way updating and integrating stresses in time is problematic. This is discussed using an example of the dynamical collapse of a soil column.},
 author = {{Andersen, S{\o}ren Mikkel Andersen}, Lars Vabbersgaard},
