Cambio de revista

--- a/2020_EFM_MPM_Eigensoftening.tex
+++ b/2020_EFM_MPM_Eigensoftening.tex
@@ -260,8 +260,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \journal{Engineering Fracture Mechanics}
-\journal{Computers and Structures}
+\journal{Engineering Fracture Mechanics}
+% \journal{Computers and Structures}
 
 \modulolinenumbers[5]
 
