--- a/Author-Novelty.tex
+++ b/Author-Novelty.tex
@@ -13,13 +13,13 @@
 \section*{Highlights}
 \setlength{\parskip}{1cm plus 5mm minus 4mm}
 \begin{itemize}
-\item Fracture mechanics within the Material Point Method is a challenging research fields that is being improved day-to-day.
+\item Fracture mechanics within the MPM is a challenging research field
 
-\item Eigenerosion is one of the fracture models that has been validated within dynamic problems with excellent results. The Eigensoftening algorithm is an interesting improvement of Eigenerosion for quasi-brittle materials.
+\item The Eigensoftening algorithm is an improvement to simulate quasi-brittle materials
 
-\item The Local Maximum Entropy shape functions together with a Predictor-Corrector time integration scheme enhance the traditional MPM scheme.
+\item The LME shape functions together with a NPC time integration enhance the standard MPM
 
-\item Several results of the enhanced MPM with eigenerosion and eigensoftening models are provided in order to compare the performance of the proposed methodology against analytical and experimental solutions with excellent results.
+\item The Eigensoftening-MPM has been validated against analytical and experimental results
 
 \end{itemize}
 
