--- a/Cover-letter.tex
+++ b/Cover-letter.tex
@@ -23,7 +23,7 @@ email address: m.molinos@alumnos.upm.es\\
 \vspace{.3in}
 
 Editor\\
-Computers and Structures\\
+Engineering Fracture Mechanics\\
 
 
 
@@ -32,7 +32,10 @@ Dear Sir:
 \vspace{.2in}
 
 Please find enclosed the electronic submission of the
-\textbf{research article} entitled \textit{``LME-MPM applied to quasi-brittle fracture''} by Miguel Molinos, Pedro Navas, Diego Manzanal and Manuel Pastor. We would like to have this manuscript reviewed by \textbf{Computers and Structures}.
+\textbf{research article} entitled \textit{``LME-MPM applied to
+  quasi-brittle fracture''} by Miguel Molinos, Pedro Navas, Diego
+Manzanal and Manuel Pastor. We would like to have this manuscript
+reviewed by \textbf{Engineering Fracture Mechanics}. 
 
 The authors of this paper warrant that this manuscript represents
 original work that is not being considered for publication, in
