Updates from Overleaf

--- a/2020_EFM_MPM_Eigensoftening.tex
+++ b/2020_EFM_MPM_Eigensoftening.tex
@@ -958,10 +958,10 @@ In the tests, particles were uniformly distributed with an almost
 constant separation of 1 mm between them, resulting in a total number of 4672
 \acrshort{mpm} particles for generating the specimen. Additionally, a
 regular cartesian background grid of 1917 nodes with 1.5 mm of nodal distance
-was generated. The velocity of the top boundary particles is 
-$v_y$ = − 2 mm/s, whereas the velocity of the bottom boundary particles is
-$v_y$ = 0 mm/s. To reduce dynamic effects due to a sudden loading, a soft loading ramp has been employed as a loading curve. Finally, the model was
-calibrated with a regularization parameter \gls{Ceps} = 1.7 and a
+was generated. The velocity of the top boundary particles is $v_y = − 2 mm/s$, 
+whereas the velocity of the bottom boundary particles is $v_y$ = 0 mm/s.
+To reduce dynamic effects due to a sudden loading, a soft loading ramp has been employed as a loading curve. 
+Finally, the model was calibrated with a regularization parameter \gls{Ceps} = 1.7 and a
 bandwidth value \gls{heps} = 15.
 
 Figure \ref{fig:Figure-Angle-Forces-test-damage-pattern} shows the
@@ -1266,7 +1266,7 @@ fellowship Fundaci\'on Agust\'in de Betancourt and Juan de la Cierva
     }
   }
     \label{alg-eigens}
-  \caption{Compute damage parameter $\chi$}
+    \caption{Compute damage parameter $\chi$}
 \end{algorithm}
 
 \section{Node-linked method for $\epsilon$-neighbourhood reconstruction}
