--- a/Biblio.bib
+++ b/Biblio.bib
@@ -52,14 +52,22 @@
 % Algorithms --------------------------------------------
 %------------------------------------------------------
 
-@inproceedings{Galetzka_et_al_2017,
-author = {Galetzka, Michael and Glauner, Patrick},
-year = {2017},
-month = {02},
-pages = {1-2},
-title = {A Simple and Correct Even-Odd Algorithm for the Point-in-Polygon Problem for Complex Polygons},
-doi = {10.5220/0006040801750178}
+@article{Galetzka_et_al_2017,
+  author    = {Michael Galetzka and
+               Patrick O. Glauner},
+  title     = {A correct even-odd algorithm for the point-in-polygon {(PIP)} problem
+               for complex polygons},
+  journal   = {CoRR},
+  volume    = {abs/1207.3502},
+  year      = {2012},
+  url       = {http://arxiv.org/abs/1207.3502},
+  archivePrefix = {arXiv},
+  eprint    = {1207.3502},
+  timestamp = {Mon, 13 Aug 2018 16:48:37 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1207-3502.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
 
 @article{Shimrat_1962,
 author = {Shimrat, M.},
